--- a/notebooks/gene_exp_mat_analysis.ipynb
+++ b/notebooks/gene_exp_mat_analysis.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "id": "d42118bd-7ffc-42ba-8700-8653c9e4e085",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-17T18:07:57.336339Z",
+     "start_time": "2024-01-17T18:07:53.246614Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
